# QuaRTS

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
src/: GameRules.Test.cpp  GameRules.cpp  GameRules.h  Main.Test.cpp  MatchModel.Test.cpp  MatchModel.cpp  MatchModel.h  PlanePrimitives.Test.cpp  PlanePrimitives.h  QuaRTS.cpp  Variant.h  game.Test.cpp  game.cpp  game.h  geometry.Test.cpp  geometry.h  match.Test.cpp  match.cpp  variant.h
